<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.francelabs.datafari</groupId>
  <artifactId>datafari-ce</artifactId>
  <!-- Main POM of datafari -->
  <packaging>pom</packaging>
  <version>5.1-dev-Community</version>
  <name>Datafari Enterprise Search - Parent POM</name>
  <properties>
    <cassandra.version>4.0-beta1</cassandra.version>
    <cassandra.driver.version>4.8.0</cassandra.driver.version>
    <datafari.version>5.1-dev-Community</datafari.version>
    <guava.version>26.0-jre</guava.version>
    <httpclient.version>4.5.9</httpclient.version>
    <java.version>1.11</java.version>
    <json.simple.version>1.1.1</json.simple.version>
    <keycloak.version>7.0.1</keycloak.version>
    <log4j.version>2.13.3</log4j.version>
    <logstash.version>7.8.0</logstash.version>
    <mcf.version>2.18</mcf.version>
    <mcf.commit.number>38e4c78f1</mcf.commit.number>
    <open.distro.version>1.9.0</open.distro.version>
    <postgres.version>42.1.3</postgres.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <solr.version>8.5.2</solr.version>
    <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
    <spring.data.cassandra.version>3.0.3.RELEASE</spring.data.cassandra.version>
    <spring.security.version>5.3.4.RELEASE</spring.security.version>
    <spring.security.kerberos.version>1.0.1.RELEASE</spring.security.kerberos.version>
    <spring.security.saml2.core.version>1.0.10.RELEASE</spring.security.saml2.core.version>
    <spring.version>5.2.8.RELEASE</spring.version>
    <spring.oauth2.version>2.3.8.RELEASE</spring.oauth2.version>
    <tika.version>1.24.1</tika.version>
    <tomcat.version>9.0.38</tomcat.version>
    <slf4j.version>1.7.25</slf4j.version>
    <zookeeper.version>3.5.5</zookeeper.version>
  </properties>
  <!-- The order of modules execution is important -->
  <modules>
    <!-- Child module datafari-core added to install project dependencies in Maven 
      repo -->
    <module>datafari-solr</module>
    <module>datafari-mcf</module>
    <module>datafari-mcf-connectors-dependencies</module>
    <module>datafari-core</module>
    <module>datafari-webapp</module>
    <module>datafari-zookeeper</module>
    <module>datafari-jena</module>
    <module>datafari-cassandra</module>
    <module>datafari-tomcat</module>
    <module>datafari-elk</module>
    <module>datafari-updateprocessor</module>
    <module>datafari-emptier-connector</module>
    <module>datafari-metadatacleaner-connector</module>
    <module>datafari-tika</module>
    <module>datafari-tika-config</module>
    <module>datafari-handler</module>
    <module>datafari-mcf-scripts</module>
    <module>datafari-share-connector</module>
    <module>datafari-git-plugin</module>
  </modules>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.0.0-M2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <release>11</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>com.googlecode.maven-download-plugin</groupId>
          <artifactId>download-maven-plugin</artifactId>
          <version>1.4.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M3</version>
          <configuration>
            <argLine> --illegal-access=permit 
            </argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.0.0-M1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.2.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>pl.project13.maven</groupId>
          <artifactId>git-commit-id-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.8</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.0.0-M1</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3.0.5</version>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <description>
Datafari is the ideal product for those who want to search through their data, while using advanced open source technologies. Datafari combines Apache ManifoldCF and Apache Solr, to allow its users to search through many different and diverse data sources: their file shares, their cloud shares (dropbox, google drive…), their databases, but also their emails and many more.
    </description>
  <url>http://www.datafari.com/en/</url>
  <inceptionYear>2011</inceptionYear>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <organization>
    <name>France Labs - Search Experts</name>
    <url>http://www.francelabs.com/en/</url>
  </organization>
  <developers>
    <developer>
      <id>culmer</id>
      <name>Cedric Ulmer</name>
      <email>cedric.ulmer@francelabs.com</email>
      <organization>France Labs</organization>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone>Europe/Paris</timezone>
    </developer>
    <developer>
      <id>otavard</id>
      <name>Olivier Tavard</name>
      <email>olivier.tavard@francelabs.com</email>
      <organization>France Labs</organization>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone>Europe/Paris</timezone>
    </developer>
    <developer>
      <id>amazoyer</id>
      <name>Aurelien Mazoyer</name>
      <email>aurelien.mazoyer@francelabs.com</email>
      <organization>France Labs</organization>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone>Europe/Paris</timezone>
    </developer>
    <developer>
      <id>jmassiera</id>
      <name>Julien Massiera</name>
      <email>julien.massiera@francelabs.com</email>
      <organization>France Labs</organization>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>Europe/Paris</timezone>
    </developer>
    <developer>
      <id>gusai</id>
      <name>Giovanni Usai</name>
      <email>giovanni.usai@francelabs.com</email>
      <organization>France Labs</organization>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>Europe/Paris</timezone>
    </developer>
  </developers>
  <issueManagement>
    <system>JIRA</system>
    <url>https://datafari.atlassian.net/secure/Dashboard.jspa</url>
  </issueManagement>
  <scm>
    <connection>scm:git:https://github.com/francelabs/datafari.git</connection>
    <tag>HEAD</tag>
    <url>https://github.com/francelabs/datafari</url>
  </scm>
</project>
